# scikit-build-core

./: .flake8  .gitignore  .gitmodules  .packit.yaml  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  CITATION.cff  README.md  noxfile.py  pyproject.toml  scikit-build-core.spec
.agents/skills/test-downstream/: SKILL.md
.distro/: F40_sdist_hash.patch  python-scikit-build-core.rpmlintrc  python-scikit-build-core.spec  scikit-build-core.spec
.distro/plans/: examples.fmf  main.fmf  pytest.fmf  rpminspect.fmf  rpmlint.fmf  smoke.fmf
.distro/tests/: rpmlint.fmf  smoke.fmf
.github/: CONTRIBUTING.md  codecov.yml  zizmor.yaml
.github/workflows/: cd.yml  ci-graalpy.yml  ci.yml  copilot-setup-steps.yml  nightlies.yml
distro/: python-scikit-build-core.spec
distro/plans/: examples.fmf  rpmlint.fmf
distro/tests/: rpmlint.fmf
docs/: build.md  changelog.md  cmakelists.md  conf.py  configuration.md  crosscompile.md  faqs.md  getting_started.md  index.md  index.rst  man.md  migration_guide.md  overrides.md  projects.md  readme.md  schema.md  search_paths.md
docs/_static/: custom.css  tippy.css
docs/_templates/components/: edit-this-page.html
docs/about/: changelog.md  projects.md
docs/api/: scikit_build_core.ast.rst  scikit_build_core.build.rst  scikit_build_core.builder.rst  scikit_build_core.file_api.model.codemodel.rst  scikit_build_core.file_api.model.rst  scikit_build_core.file_api.rst  scikit_build_core.hatch.rst  scikit_build_core.init.rst  scikit_build_core.metadata.rst  scikit_build_core.repair_wheel.rst  scikit_build_core.resources.find_python.rst  scikit_build_core.resources.rst  scikit_build_core.rst  scikit_build_core.settings.rst  scikit_build_core.setuptools.rst  scikit_build_core.utils.rst
docs/cli/: build.md  configure.md  dynamic_metadata.md  index.md  install.md  metadata.md
docs/configuration/: advanced.md  config_settings.md  dynamic.md  editable.md  entrypoint_config.md  formatted.md  index.md  overrides.md  search_paths.md  variants.md  wrapping.md
docs/data/: projects.toml
docs/examples/: main.fmf  test.py  test.sh
docs/examples/downstream/: main.fmf
docs/examples/downstream/pybind11_example/: CMakeLists.txt  README.md  main.fmf  pyproject.toml
docs/examples/downstream/pybind11_example/src/scikit_build_example/: __init__.py
docs/examples/downstream/pybind11_example/tests/: test_basic.py
docs/examples/getting_started/: main.fmf  test.py
docs/examples/getting_started/abi3t/: CMakeLists.txt  example.c  pyproject.toml
docs/examples/getting_started/cython/: CMakeLists.txt  example.pyx  main.fmf  pyproject.toml
docs/examples/getting_started/fortran/: CMakeLists.txt  example.f  main.fmf  pyproject.toml
docs/examples/getting_started/nanobind/: CMakeLists.txt  example.cpp  main.fmf  pyproject.toml
docs/examples/getting_started/swig/: CMakeLists.txt  example.i  main.fmf  pyproject.toml
docs/ext/: conftabs.py  confval_env.py  progout.py
docs/guide/: build.md  cmakelists.md  crosscompile.md  ctypes.md  debugging.md  dynamic_link.md  faqs.md  getting_started.md  going_further.md  migration_guide.md  workspaces.md
docs/plugins/: hatchling.md  setuptools.md
docs/reference/: cli.md  configs.md
src/scikit_build_core/: __init__.py  __main__.py  _check_extra.py  _logging.py  _reproducible.py  _shutil.py  _variants.py  _version.pyi  build.py  cmake.py  errors.py  file_api.py  format.py  generator.py  get_requires.py  logging.py  program_search.py  settings.py
src/scikit_build_core/_compat/: argparse.py  builtins.py  importlib.py  setuptools_errors.py  tomllib.py  typing.py
src/scikit_build_core/ast/: ast.py  tokenizer.py
src/scikit_build_core/builder/: __init__.py  __main__.py  _load_provider.py  builder.py  cmake_module_dirs.py  cross_compile.py  generator.py  get_requires.py  get_wheel_tag.py  macos.py  sysconfig.py  wheel_tag.py
src/scikit_build_core/cli/: __init__.py  build.py  configure.py  dynamic_metadata.py  install.py  main.py  metadata.py  utils.py
src/scikit_build_core/file_api/: __main__.py  _cattrs_converter.py  converter.py  loadfile.py  query.py  reply.py
src/scikit_build_core/hatch/: hooks.py  plugin.py
src/scikit_build_core/init/: __main__.py
src/scikit_build_core/metadata/: __init__.py  regex.py  (+3 more)
src/scikit_build_core/resources/templates/abi3/: CMakeLists.txt  pyproject.toml
src/scikit_build_core/resources/templates/abi3/src/${module}/: _core.c
src/scikit_build_core/resources/templates/cython/: CMakeLists.txt  pyproject.toml
src/scikit_build_core/resources/templates/cython/src/${module}/: _core.pyx
src/scikit_build_core/resources/templates/fortran/: CMakeLists.txt  pyproject.toml
src/scikit_build_core/resources/templates/fortran/src/${module}/: _core.f
src/scikit_build_core/resources/templates/nanobind/: CMakeLists.txt  pyproject.toml
src/scikit_build_core/resources/templates/nanobind/src/${module}/: _core.cpp
src/scikit_build_core/resources/templates/swig/: CMakeLists.txt  _core.i  pyproject.toml
tests/: conftest.py  constraints.txt  main.fmf  plans.fmf  test_auto.py  test_auto_cmake_version.py  test_auto_requires.py  test_broken_fallback.py  test_build_cli.py  test_builder.py  test_check_extra.py  test_cli.py  test_cmake_ast.py  test_cmake_config.py  test_cmake_modules_ep.py  test_cmake_settings.py  test_common_wheel_helpers.py  test_config_settings.py  test_cross_compile.py  test_custom_modules.py  test_dynamic_metadata.py  test_dynamic_metadata_unit.py  test_editable.py  test_editable_build_paths.py  test_editable_generated.py  test_editable_redirect.py  test_editable_unit.py  test_entrypoint_config.py  test_errors.py  test_file_processor.py  test_fileapi.py  test_force_include.py  test_format.py  test_fortran.py  test_generate.py  test_generate_include.py  test_generator_default.py  test_get_requires.py  test_hatchling.py  test_init.py  (+46 more)
tests/simple_pure/: CMakeLists.txt  simple_pure.cpp
tests/simple_pyproject_ext/: CMakeLists.txt  pyproject.toml
tests/simple_setuptools_ext/: CMakeLists.txt  setup.py
tests/utils/: download_wheels.py  pathutils.py  schema_models.py
(+113 files in other folders)
